--- a/src/main.scss
+++ b/src/main.scss
@@ -3,8 +3,7 @@
 
 // Include any default variable overrides here (though functions won't be available)
 
-$primary: red;
+$primary: #1c1e53;
+$secondary: #fcd980;
 
-@import "../node_modules/bootstrap/scss/bootstrap";
-
-// Then add additional custom code here
+@import '../node_modules/bootstrap/scss/bootstrap';
